[tool.poetry]
name = "llm_strategy"
version = "0.0.1"
description = "Directly Connecting Python to LLMs - Dataclasses & Interfaces <-> LLMs"
authors = ["Andreas Kirsch, Daedalus Lab Ltd <blackhc@gmail.com>"]
repository = "https://github.com/blackhc/llm-strategy"
documentation = "https://blackhc.github.io/llm-strategy/"
readme = "README.md"
packages = [
  {include = "llm_strategy"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.0.42"
openai = "^0.25.0"
docstring-parser = "^0.15"
parse = "^1.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["llm_strategy"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["llm_strategy"]

