[tool.poetry]
name = "llm_strategy"
version = "2.1.0"
description = "Directly Connecting Python to LLMs - Dataclasses & Interfaces <-> LLMs"
authors = ["Andreas Kirsch, Daedalus Lab Ltd <blackhc@gmail.com>"]
repository = "https://github.com/blackhc/llm-strategy"
documentation = "https://blackhc.github.io/llm-strategy/"
readme = "README.md"
packages = [
  {include = "llm_strategy"},
  {include = "llm_hyperparameters"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = ">=0.0.352"
openai = ">=1.6.1"
typing-extensions = "^4.9.0"
pydantic = "^1.10.13"
llmtracer = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
deptry = "^0.6"
mypy = "^0.991"
pre-commit = "^2.21.0"
tox = "^3.28.0"
types-pyyaml = "^6.0.12.12"
types-dataclasses = "^0.6"
bump2version = "^1.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^8.5.11"
mkdocstrings = {extras = ["python"], version = "^0"}
mkdocs-gen-files = "^0"
mkdocs-section-index = "^0"
mkdocs-literate-nav = "^0"
mkdocs-include-markdown-plugin = {version = "^4.0.4",  python = ">=3.9,<3.12"}

[tool.poetry.group.examples.dependencies]
textual = {version = "^0", extras = ["dev"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["llm_strategy"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = "tests/"
ignore_missing_imports = "True"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["llm_strategy"]

[tool.deptry]
extend_exclude = [".*/tests/.*", "examples/.*", "docs/.*"]
ignore_obsolete = [
        "openai"
]